Fix 'Diagrams does not have antialising enabled'

FIXED-IN:4.8.1
BUG:383089